--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -142,7 +142,7 @@
     "            if mdir in allowable_locations:\n",
     "                machine_id = mdir\n",
     "            else:\n",
-    "                print(\"Skipping directory {0}\", os.path.join(\"directory\", mdir))\n",
+    "                print(\"Skipping directory {0}\".format(os.path.join(\"directory\", mdir)))\n",
     "                continue\n",
     "            \n",
     "        machine_logs = logs.setdefault(machine_id, {})\n",
@@ -151,6 +151,10 @@
     "        for log_file in log_files:\n",
     "            if log_file.endswith(\".log\") or log_file.endswith(\".planning\"):\n",
     "                log_path = os.path.join(directory, mdir, log_file)\n",
+    "                \n",
+    "                if os.stat(log_path).st_size == 0:\n",
+    "                    print(\"Skpping empty file {0}\".format(log_path))\n",
+    "                    continue\n",
     "                \n",
     "                parts = log_file.split(\".\")\n",
     "                extension = parts[-1]\n",
@@ -257,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure()\n",
+    "plt.figure(figsize = (4, 3))\n",
     "\n",
     "labels = (\"Unbounded\", \"MAGE 1GiB\", \"OS 1 GiB\")\n",
     "values = (simple_unbounded_time, simple_mage_time, simple_os_time)\n",
@@ -480,7 +484,7 @@
    "outputs": [],
    "source": [
     "hg_experiments = ((\"merge_sorted\", 1048576), (\"full_sort\", 1048576), (\"loop_join\", 2048), (\"matrix_vector_multiply\", 8192), (\"binary_fc_layer\", 16384))\n",
-    "ckks_experiments = ((\"real_sum\", 65536), (\"real_statistics\", 16384), (\"real_matrix_vector_multiply\", 256), (\"real_naive_matrix_multiply\", 128), (\"real_tiled_matrix_multiply\", 128))\n",
+    "ckks_experiments = ((\"real_sum\", 65536), (\"real_statistics\", 16384), (\"real_matrix_vector_multiply\", 256), (\"real_naive_matrix_multiply\", 128), (\"real_tiled_16_matrix_multiply\", 128))\n",
     "\n",
     "experiments = hg_experiments + ckks_experiments\n",
     "experiment_display_names = (\"merge\\nn = 1048576\", \"sort\\nn = 1048576\", \"ljoin\\nn = 2048\", \"mvmul\\nn = 8192\", \"binfclayer\\nn = 16384\", \"rsum\\nn = 65536\", \"rstats\\nn = 16384\", \"rmvmul\\nn = 256\", \"n_rmatmul\\nn = 128\", \"t_rmatmul\\nn = 128\")"
@@ -495,7 +499,7 @@
     "plt.figure(figsize = (15, 2))\n",
     "\n",
     "# TODO: Support multiple trials done in parallel across different pairs of machines\n",
-    "benchmark_data = single_node_logs[0][\"log\"][\"single_machine\"]\n",
+    "benchmark_data = single_node_logs[0][\"log\"][\"workers_1\"]\n",
     "graph_data = {}\n",
     "for i, e in enumerate(experiments):\n",
     "    graph_data[e] = {}\n",
@@ -525,7 +529,7 @@
    "outputs": [],
    "source": [
     "# TODO: Support multiple trials done in parallel across different pairs of machines\n",
-    "planning_data = single_node_logs[0][\"planning\"][\"single_machine\"]\n",
+    "planning_data = single_node_logs[0][\"planning\"][\"workers_1\"]\n",
     "for i, e in enumerate(experiments):\n",
     "    graph_data[e] = {}\n",
     "    print(experiment_display_names[i].split(\"\\n\")[0], end = \"\")\n",
@@ -575,7 +579,7 @@
    "outputs": [],
    "source": [
     "hg_experiments_4 = ((\"merge_sorted\", 4194304), (\"full_sort\", 4194304), (\"loop_join\", 4096), (\"matrix_vector_multiply\", 16384), (\"binary_fc_layer\", 32768))\n",
-    "ckks_experiments_4 = ((\"real_sum\", 262144), (\"real_statistics\", 65536), (\"real_matrix_vector_multiply\", 512), (\"real_naive_matrix_multiply\", 256), (\"real_tiled_matrix_multiply\", 256))\n",
+    "ckks_experiments_4 = ((\"real_sum\", 262144), (\"real_statistics\", 65536), (\"real_matrix_vector_multiply\", 512), (\"real_naive_matrix_multiply\", 256), (\"real_tiled_16_matrix_multiply\", 256))\n",
     "\n",
     "experiments_4 = hg_experiments_4 + ckks_experiments_4\n",
     "experiment_4_display_names = (\"merge\\nn = 4194384\", \"sort\\nn = 4194384\", \"ljoin\\nn = 4096\", \"mvmul\\nn = 16384\", \"binfclayer\\nn = 32768\", \"rsum\\nn = 262144\", \"rstats\\nn = 32768\", \"rmvmul\\nn = 512\", \"n_rmatmul\\nn = 256\", \"t_rmatmul\\nn = 256\")"
@@ -625,79 +629,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAN Experiments: OT Parallelism\n",
-    "============================"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wan_ot_directory = \"logs-wan-ot\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wan_ot_logs = parse_log_directory(wan_ot_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wan_oregon_style = {\"label\": \"us-west1\", \"color\": \"blue\", \"ls\": \"-\"}\n",
-    "wan_iowa_style = {\"label\": \"us-central1\", \"color\": \"orange\", \"ls\": \"-.\"}\n",
-    "wan_lan_style = {\"label\": \"Local (US West 2)\", \"color\": \"green\", \"ls\": \"--\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize = (3, 2))\n",
-    "    \n",
-    "benchmark_data = wan_ot_logs[0][\"log\"][\"wan\"][\"oregon\"][1][\"merge_sorted\"][1048576]\n",
-    "\n",
-    "ot_concurrencies = (2, 4, 8, 16, 32, 64, 128, 256)\n",
-    "exec_times = []\n",
-    "for ot_concurrency in ot_concurrencies:\n",
-    "    ot_num_connections = 2\n",
-    "    ot_pipeline_depth = ot_concurrency // ot_num_connections\n",
-    "    data = benchmark_data[ot_pipeline_depth][ot_num_connections][\"mage\"]\n",
-    "    \n",
-    "    total_times = []\n",
-    "    for tag in (\"t{0}\".format(i) for i in itertools.count(start = 1)):\n",
-    "        if tag not in data[\"w0\"]:\n",
-    "            break\n",
-    "        measurement = data[\"w0\"][tag]\n",
-    "        total_times.append(measurement.total_time_ms / 1000.0)\n",
-    "    exec_times.append(np.percentile(total_times, (0, 25, 50, 75, 100)))\n",
-    "\n",
-    "error_bars = ([stats[2] - stats[1] for stats in exec_times], [stats[3] - stats[2] for stats in exec_times])\n",
-    "plt.errorbar(ot_concurrencies, tuple(stats[2] for stats in exec_times), yerr = error_bars, capsize = errbarsize, **wan_oregon_style)\n",
-    "\n",
-    "plt.legend()\n",
-    "\n",
-    "plt.xlabel(\"OT Concurrency\")\n",
-    "plt.ylabel(\"Time (s)\")\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "WAN Experiments: Number of Connections\n",
     "==================================="
    ]
@@ -718,6 +649,18 @@
    "outputs": [],
    "source": [
     "wan_conn_logs = parse_log_directory(wan_conn_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wan_oregon_style = {\"label\": \"us-west1\", \"color\": \"blue\", \"ls\": \"-\"}\n",
+    "wan_iowa_style = {\"label\": \"us-central1\", \"color\": \"orange\", \"ls\": \"-.\"}\n",
+    "wan_lan_style = {\"label\": \"Local (US West 2)\", \"color\": \"green\", \"ls\": \"--\"}\n",
+    "errbarsize = 3"
    ]
   },
   {
@@ -765,6 +708,68 @@
     "plt.ylabel(\"Time (s)\")\n",
     "\n",
     "plt.ylim(0, 1200)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WAN Experiments: OT Parallelism\n",
+    "============================"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wan_ot_directory = \"logs-wan-ot\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wan_ot_logs = parse_log_directory(wan_ot_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (3, 2))\n",
+    "    \n",
+    "benchmark_data = wan_ot_logs[0][\"log\"][\"wan\"][\"oregon\"][1][\"merge_sorted\"][1048576]\n",
+    "\n",
+    "ot_concurrencies = (2, 4, 8, 16, 32, 64, 128, 256)\n",
+    "exec_times = []\n",
+    "for ot_concurrency in ot_concurrencies:\n",
+    "    ot_num_connections = 2\n",
+    "    ot_pipeline_depth = ot_concurrency // ot_num_connections\n",
+    "    data = benchmark_data[ot_pipeline_depth][ot_num_connections][\"mage\"]\n",
+    "    \n",
+    "    total_times = []\n",
+    "    for tag in (\"t{0}\".format(i) for i in itertools.count(start = 1)):\n",
+    "        if tag not in data[\"w0\"]:\n",
+    "            break\n",
+    "        measurement = data[\"w0\"][tag]\n",
+    "        total_times.append(measurement.total_time_ms / 1000.0)\n",
+    "    exec_times.append(np.percentile(total_times, (0, 25, 50, 75, 100)))\n",
+    "\n",
+    "error_bars = ([stats[2] - stats[1] for stats in exec_times], [stats[3] - stats[2] for stats in exec_times])\n",
+    "plt.errorbar(ot_concurrencies, tuple(stats[2] for stats in exec_times), yerr = error_bars, capsize = errbarsize, **wan_oregon_style)\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.xlabel(\"OT Concurrency\")\n",
+    "plt.ylabel(\"Time (s)\")\n",
     "\n",
     "plt.show()"
    ]
